 * Fixed printable buglist for "All projects" option
 * Fixed document links (ChangeLog, README, etc.)
 * Fixed problem where portuguese_brazil localization did not appear correctly.
 * Fixed several minor CSS class consistency issues.
 * Fixed file download links to use rawurlencode().
 * Fixed admin_check.php to check for Windows style \.
 * Fixed file dates to display correctly.
 * Removed site_settings link in print_manage_doc_menu().
 * Renamed doc/CONFIGURATION to doc/CUSTOMIZATION.
 * Modified edit user links to use the username instead of the [edit] link.
 * Modified edit project links to use the project name instead of the [edit] link.
 * Modified default/config_inc1.php to have more more css global variables.
 * Modified wordwrap to use builtin php function if available.
 * Added project name as supplementary info next to bug id in buglist for "All projects" option
 * Added Basic Authentication patch.
 * Added CSV Export patch.
 * Added Anonymous Login patch.
 * Added CVS linking patch.


01.23.2002  -   0.17.0

 * Fixed potential problems with proxies and HTTP_REFERER not being properly sent.
 * Fixed bugnote editing to be unavailable when bug is resolved or closed.
 * Fixed viewing bugs to automatically switch projects if you view a bug from another project (often done through a link).
 * Fixed file uploads to report an error when a blank file is uploaded.
 * Fixed database and file to no longer use TIMESTAMPS.
 * Fixed password reset to blank to work for other encryption types.
 * Fixed admin_upgrade.php to honor the $g_php global.
 * Fixed access checks to see if viewer has permission to view the bug.
 * Fixed project list drop down to work even if project user list is empty.
 * Fixed advaced summary compatibility with the latest JPGraph release (1.4)
 * Modified many files for extensive use of CSS.
 * Modified BLOB field to LONGBLOB.
 * Modified bug action buttons to be more consistent.
 * Modified version string to be longer.