@@ -15,12 +15,13 @@ Mantis
  * Fixed file download links to use rawurlencode().
  * Fixed admin_check.php to check for Windows style \.
  * Fixed file dates to display correctly.
+ * Fixed bug update button to go to proper simple or advanced page.
  * Removed site_settings link in print_manage_doc_menu().
  * Renamed doc/CONFIGURATION to doc/CUSTOMIZATION.
  * Modified edit user links to use the username instead of the [edit] link.
  * Modified edit project links to use the project name instead of the [edit] link.
  * Modified default/config_inc1.php to have more more css global variables.
- * Modified wordwrap to use builtin php function if available.
+ * Modified wordwrap to use built-in php function if available.
  * Added project name as supplementary info next to bug id in buglist for "All projects" option
  * Added Basic Authentication patch.
  * Added CSV Export patch.
